maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:70: error: expected start of definition
override def run() {
         ^JediEscaper:80: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:81: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:82: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:83: error: Unmatched closing brace '}' ignored here
}
^